js example not working

--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
           src="./images/gattonzolo.jpg"
         />
       </div>
-      <div class="slider-controls">
-        <input type="button" value="Previous" /><input
-          type="button"
-          value="Pause"
-        /><input type="button" value="Next" />
-      </div>
+      <div class="slider-controls"></div>
     </div>
 
     <script src="js/script.js"></script>
